objects/Sprint_Master__c.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will remove it from the Lookup on Accounts.  You will no longer be able to select this sprint to assign.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Run_Assignments__c</fullName>
        <label>Run Assignments</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Run Assignments for this Sprint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SprintCountTasks__c</fullName>
        <label>Sprint Task Count</label>
        <summaryForeignKey>Sprint_Master_Task__c.Sprint_Master__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sprint_Description__c</fullName>
        <label>Sprint Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint_Group__c</fullName>
        <label>Sprint Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sprint 1</fullName>
                </value>
                <value>
                    <fullName>Sprint 2</fullName>
                </value>
                <value>
                    <fullName>Sprint 3</fullName>
                </value>
                <value>
                    <fullName>Sprint 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sprint_Name__c</fullName>
        <label>Sprint Name</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Sprint Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sprint_Name__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sprint Master ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sprint Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>